--- a/index.html
+++ b/index.html
@@ -266,44 +266,37 @@
           </div>
           <div class="column is-3">
             <a href="#">
-              <figure class="image is-2by1 foto-item"
-                style="background-image: url('https://picsum.photos/320/180?image=0');"></figure>
+              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
             </a>
           </div>
           <div class="column is-3">
             <a href="#">
-              <figure class="image is-2by1 foto-item"
-                style="background-image: url('https://picsum.photos/320/180?image=10');"></figure>
+              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
             </a>
           </div>
           <div class="column is-3">
             <a href="#">
-              <figure class="image is-2by1 foto-item"
-                style="background-image: url('https://picsum.photos/320/180?image=20');"></figure>
+              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
             </a>
           </div>
           <div class="column is-3">
             <a href="#">
-              <figure class="image is-2by1 foto-item"
-                style="background-image: url('https://picsum.photos/320/180?image=30');"></figure>
+              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
             </a>
           </div>
           <div class="column is-3">
             <a href="#">
-              <figure class="image is-2by1 foto-item"
-                style="background-image: url('https://picsum.photos/320/180?image=40');"></figure>
+              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
             </a>
           </div>
           <div class="column is-3">
             <a href="#">
-              <figure class="image is-2by1 foto-item"
-                style="background-image: url('https://picsum.photos/320/180?image=50');"></figure>
+              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
             </a>
           </div>
           <div class="column is-3">
             <a href="#">
-              <figure class="image is-2by1 foto-item"
-                style="background-image: url('https://picsum.photos/320/180?image=60');"></figure>
+              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
             </a>
           </div>
           <div class="column is-3">
@@ -347,8 +340,7 @@
           </div>
           <div class="column is-12 prolog has-text-centered">
 
-            <a href="https://api.whatsapp.com/send?phone=6285721876990&text=Halo%20Sherly,%20saya%20akan%20datang%20di%20acara%20pernikahan&source=&data="
-              class="button btn-whatsapp" data-aos="fade-right">
+            <a href="#" class="button btn-whatsapp" data-aos="fade-right">
               <i class="fab fa-whatsapp"></i>
               &nbsp;&nbsp;Telegram chat
             </a>
