--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           <div class="column is-3">
             <a href="#">
               <figure class="image is-2by1 foto-item"
-                style="background-image: url('https://picsum.photos/320/180?image=70');"></figure>
+                style="background-image: url('');"></figure>
             </a>
           </div>
         </div>
