--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Свадьба Георигия и Юлии</title>
   <!-- Bulma Version 0.8.x-->
   <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/menikah.css" />
   <link rel="stylesheet" type="text/css" href="css/jquery.countdown.css" />
   <script src="https://kit.fontawesome.com/2828f7885a.js"
@@ -257,81 +258,6 @@
 
 
 
-    <!-- Begin Foto -->
-    <div class="section-dark foto-foto" id="foto">
-      <div class="container">
-        <div class="columns is-multiline" data-aos="fade-in" data-aos-easing="linear">
-          <div class="column is-12">
-            <h1 class="title has-text-centered section-title">Свадебные фотографии</h1>
-          </div>
-          <div class="column is-3">
-            <a href="#">
-              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
-            </a>
-          </div>
-          <div class="column is-3">
-            <a href="#">
-              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
-            </a>
-          </div>
-          <div class="column is-3">
-            <a href="#">
-              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
-            </a>
-          </div>
-          <div class="column is-3">
-            <a href="#">
-              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
-            </a>
-          </div>
-          <div class="column is-3">
-            <a href="#">
-              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
-            </a>
-          </div>
-          <div class="column is-3">
-            <a href="#">
-              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
-            </a>
-          </div>
-          <div class="column is-3">
-            <a href="#">
-              <figure class="image is-2by1 foto-item" style="background-image: url('');"></figure>
-            </a>
-          </div>
-          <div class="column is-3">
-            <a href="#">
-              <figure class="image is-2by1 foto-item"
-                style="background-image: url('');"></figure>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End Work Content -->
-
-    <!-- Begin PESAN SPONSOR-->
-
-    <!-- End PESAN SPONSOR-->
-
-    <!-- Begin Tentang Sherly and Daeng -->
-    <div class="section-light regular-section" id="dresscode">
-      <div class="container">
-        <div class="column is-12 prolog">
-          <h1 class="title has-text-centered section-title">Dress Code</h1>
-        </div>
-
-        <div class="columns">
-
-        </div>
-      </div>
-
-
-
-    </div>
-    <!-- End Tentang Sherly dan Daeng -->
-
-    <!-- Begin RSVP Content -->
     <div class="section-dark contact" id="rsvp">
       <div class="container">
         <div class="columns is-multiline" data-aos="fade-in-up" data-aos-easing="linear">
@@ -349,6 +275,41 @@
         </div>
       </div>
     </div>
+    <!-- End Work Content -->
+
+    <!-- Begin PESAN SPONSOR-->
+
+    <!-- End PESAN SPONSOR-->
+
+    <!-- Begin Tentang Sherly and Daeng -->
+    <div class="section-light regular-section" id="dresscode">
+      <div class="container">
+        <div class="column is-12 prolog">
+          <h1 class="title has-text-centered section-title">Dress Code</h1>
+        </div>
+        <div class="curcle-dress-code">
+          <div class="curle">
+          </div>
+          <div class="curle">
+          </div>
+          <div class="curle">
+          </div>
+          <div class="curle">
+          </div>
+          <div class="curle">
+          </div>
+        </div>
+        <div class="columns">
+
+        </div>
+      </div>
+
+
+
+    </div>
+    <!-- End Tentang Sherly dan Daeng -->
+
+    <!-- Begin RSVP Content -->
     <!-- End RSVP Content -->
   </div>
   <!-- End Main Content -->
