--- a/index.html
+++ b/index.html
@@ -281,32 +281,24 @@
 
     <!-- End PESAN SPONSOR-->
 
-    <!-- Begin Tentang Sherly and Daeng -->
     <div class="section-light regular-section" id="dresscode">
       <div class="container">
         <div class="column is-12 prolog">
           <h1 class="title has-text-centered section-title">Dress Code</h1>
         </div>
-        <div class="curcle-dress-code">
-          <div class="curle">
-          </div>
-          <div class="curle">
-          </div>
-          <div class="curle">
-          </div>
-          <div class="curle">
-          </div>
-          <div class="curle">
-          </div>
+        <div class="circle-dress-code">
+          <div class="circle" style="background-color: 	#ffffff;"></div>
+          <div class="circle" style="background-color: #525f74;"></div>
+          <div class="circle" style="background-color: #ff8b7d;"></div>
+          <div class="circle" style="background-color: #559893;"></div>
+          <div class="circle" style="background-color: #7f828d;"></div>
         </div>
         <div class="columns">
-
+          <!-- Содержимое секции -->
         </div>
       </div>
-
-
-
     </div>
+
     <!-- End Tentang Sherly dan Daeng -->
 
     <!-- Begin RSVP Content -->
