--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <!-- Begin Hero Content-->
       <div class="hero-body">
         <div class="container has-text-centered">
-          <h1 class="subtitle">Wedding</h1>
+          <h1 class="subtitle">Свадьба</h1>
           <h2 class="title">George & Julia</h2>
           <h4 class="subtitle tempatwaktu">
 
@@ -166,9 +166,9 @@
       <p class="bodytext" data-aos="fade-in" data-aos-easing="linear">
         Дорогие гости!
         <br />
-        Приглашаем вас разделить с нами радость особенного для нас события
+        Приглашаем вас разделить с нами радость особенного для нас
         <br />
-        и стать частью нашей семейной истории, ваши
+        события и стать частью нашей семейной истории, ваши
       </p>
       <div data-aos="fade-in" data-aos-easing="linear">
         <div class="nama-lengkap">
