--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
               </a>
             </div>
             <div class="navbar-item">
-              <a class="navbar-item" href="#Waktu">
-                Дата
-              </a>
-            </div>
-            <div class="navbar-item">
               <a class="navbar-item" href="#lokasi">
                 Место
               </a>
             </div>
             <div class="navbar-item">
               <a class="navbar-item" href="#dresscode">
-                Dress Code
+                Дресс-код
+              </a>
+            </div>
+            <div class="navbar-item">
+              <a class="navbar-item" href="#flowers">
+                Цветочная подписка
               </a>
             </div>
             <div class="navbar-item">
@@ -77,7 +77,13 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <h1 class="subtitle">Свадьба</h1>
-          <h2 class="title">George & Julia</h2>
+          <h2 class="title">
+            Георгия
+            <br />
+            и
+            <br />
+            Юлии
+          </h2>
           <h4 class="subtitle tempatwaktu">
 
             Пятница, 27 Сентября 2024
@@ -141,16 +147,16 @@
                   <a href="#home">О нас</a>
                 </li>
                 <li>
-                  <a href="#Waktu">Дата</a>
-                </li>
-                <li>
                   <a href="#lokasi">Место</a>
                 </li>
                 <li>
-                  <a href="#dresscode">Dress Code</a>
+                  <a href="#dresscode">Дресс-код</a>
+                </li>
+                <li>
+                  <a href="#flowers">Цветочная подписка</a>
+                </li>
                 <li>
                   <a href="#accept">Подтверждение</a>
-                </li>
                 </li>
               </ul>
             </div>
@@ -169,34 +175,30 @@
 
     <!-- Begin regular-section-->
     <div class="section-light regular-section has-text-centered has-vertically-aligned-content" id="regular-section">
-
-      <p class="bodytext" data-aos="fade-in" data-aos-easing="linear">
+      <p class="alfa-text" data-aos="fade-in" data-aos-easing="linear">
         Дорогие гости!
-        <br />
+      </p>
+      <p class="bodytext" data-aos="fade-in" data-aos-easing="linear">
         Приглашаем вас разделить с нами радость особенного для нас
         <br />
         событияи стать частью нашей семейной истории, ваши
       </p>
-      <div data-aos="fade-in" data-aos-easing="linear">
+      <div class="names" data-aos="fade-in" data-aos-easing="linear">
         <div class="nama-lengkap">
-          George
-        </div>
-        <div class="ampersand">&</div>
-        <div class="nama-lengkap">
-          Julia
+          Георгий и Юлия
         </div>
       </div>
     </div>
 
     <!-- End regular-section-->
     <!-- Begin Waktu Section -->
-    <div class="section-dark" id="Waktu">
+    <div class="section-dark" id="lokasi">
       <div class="container">
         <div class="column is-12 regular-section">
-          <h1 class="title has-text-centered section-title">Дата</h1>
+          <h1 class="title has-text-centered section-title">Место</h1>
         </div>
-        <div class="columns is-multiline">
-          <div class="column is-4 has-vertically-aligned-content" data-aos="fade-right">
+        <div id="text-column" class="columns is-multiline">
+          <!-- <div class="column is-4 has-vertically-aligned-content" data-aos="fade-right">
 
             <p class="is-larger has-text-centered">
             <div class="waktu tanggal-hari has-text-centered">Пятница</div>
@@ -204,107 +206,97 @@
             <div class="waktu tanggal-bulan has-text-centered">Сентябрь 2024</div>
             </p>
 
-          </div>
-          <div class="column is-4 has-vertically-aligned-content" data-aos="fade-in" data-aos-easing="linear">
+          </div>-->
+          <div class="column is-4 has-vertically-aligned-content" data-aos="fade-right" data-aos-easing="linear">
 
             <p class="waktu is-larger has-text-centered">
-              Время росписи
+              <strong>12.20</strong>
               <br>
-              <strong>12.40</strong>
+              <strong>ЗАГС</strong>
+              <br>
+              Красноармейская ул., 2, Раменское
             </p>
-
+            <div class="has-text-centered">
+              <a
+                href="https://yandex.ru/maps/10750/ramenskoe/?ll=38.229697%2C55.570293&mode=poi&poi%5Bpoint%5D=38.228668%2C55.570148&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D1057468853&z=18.37t">
+                <button class="form-place">Показать на карте</button>
+              </a>
+            </div>
           </div>
+          <div class="column is-4 has-vertically-aligned-content" data-aos="fade-left" data-aos-easing="linear">
 
-          <div class="column is-4 has-vertically-aligned-content" data-aos="fade-left">
-
-            <h1 class="waktu is-larger has-text-centered">
-              Банкетная часть
-              <br>
+            <p class="waktu is-larger has-text-centered">
               <strong>14.00 - 24:00</strong>
-            </h1>
-
-
+              <br>
+              <strong>Ресторан "Ново-Рождественно"</strong>
+              <br>
+              Московская область, г. Жуковский ул. Речной проезд, д. 21, стр. 6
+            </p>
+            <div class="has-text-centered">
+              <a href="https://yandex.ru/maps/org/novo_rozhdestvenno/145187428535/?ll=38.098980%2C55.571576&z=16.84">
+                <button class="form-place">Показать на карте</button>
+              </a>
+            </div>
           </div>
-
         </div>
       </div>
     </div>
     <!-- End Waktu Content -->
 
     <!-- Begin Lokasi Section -->
-    <div class="section-light" id="lokasi" data-aos="fade-in" data-aos-easing="linear">
-      <div class="container">
-        <div class="column is-12 regular-section">
-          <h1 class="title has-text-centered section-title">Место</h1>
-          <p class="tempat is-larger has-text-centered">
-            <strong>Ресторан "Ново-Рождественно"</strong>
-            <br>
-            Московская область, г. Жуковский
-            <br>
-            ул. Речной проезд, д. 21, стр. 6
-            <br>
-          </p>
-        </div>
-        <div class="section-map">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.654582601115!2d38.0979643!3d55.5712343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414abf20e7e7189f%3A0xbc3c51bdfd5d7688!2sNovo-Rozhdestvenno%20Yacht%20Club!5e0!3m2!1sen!2sru!4v1691006543245!5m2!1sen!2sru"
-            width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-        <div class="has-text-centered">
-          <a href="https://www.google.ru/maps/place/%D0%AF%D1%85%D1%82-%D0%9A%D0%BB%D1%83%D0%B1+%D0%9D%D0%BE%D0%B2%D0%BE-%D0%A0%D0%BE%D0%B6%D0%B4%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D0%BE/@55.5719376,38.1059145,13.42z/data=!4m9!3m8!1s0x414abf20e7e7189f:0xbc3c51bdfd5d7688!5m2!4m1!1i2!8m2!3d55.570593!4d38.09778!16s%2Fg%2F11b6d06yvm?entry=ttu"
-            class="button btn-arah" data-aos="fade-right">
-            <i class="far fa-directions"></i>
-            &nbsp;&nbsp;Показать на карте
-          </a>`
-        </div>
-      </div>
-    </div>
+
     <!-- End Lokasi Content -->
-
-
-
-
-    <div class="section-dark contact" id="rsvp">
-      <div class="container">
-        <div class="columns is-multiline" data-aos="fade-in-up" data-aos-easing="linear">
-          <div class="column is-12 prolog">
-            <h1 class="title has-text-centered section-title">Детали</h1>
-          </div>
-          <div class="column is-12 prolog has-text-centered">
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <!-- End Work Content -->
-
-    <!-- Begin PESAN SPONSOR-->
-
-    <!-- End PESAN SPONSOR-->
 
     <div class="section-light regular-section" id="dresscode">
       <div class="container">
         <div class="column is-12 prolog">
-          <h1 class="title has-text-centered section-title">Dress Code</h1>
+          <h1 class="title has-text-centered section-title">Дресс-код</h1>
         </div>
         <div class="style-box">
-          <h2 class="box-sml">style - Emerald</h2>
+          <p class="bodytext" data-aos="fade-in" data-aos-easing="linear">
+            Для нас главное - ваше присутствие!
+            <br />
+            Но мы будем рады, если в своих нарядах вы поддержите цветовую гамму и стиль нашей свадьбы:
+          </p>
         </div>
-        <div class="circle-dress-code">
-          <div class="circle" style="background-color: 	#808000;"></div>
-          <div class="circle" style="background-color: #1E5945;"></div>
-          <div class="circle" style="background-color: #9ACD32;"></div>
-          <div class="circle" style="background-color: #559893;"></div>
-          <div class="circle" style="background-color: #3BB08F;"></div>
-        </div>
-        <div class="columns">
-          <!-- Содержимое секции -->
+        <div class="circle-dress-code" data-aos="fade-left" data-aos-easing="ease">
+          <div class="circle" style="background-color: 	#71BC78;"></div>
+          <div class="circle" style="background-color: #5D9B9B;"></div>
+          <div class="circle" style="background-color: #3EB489;"></div>
+          <div class="circle" style="background-color: #FEE5AC;"></div>
+          <div class="circle" style="background-color: #D8BFD8;"></div>
         </div>
       </div>
     </div>
 
-    <div class="section-dark contact" id="accept">
+
+    <div class="section-dark contact" id="flowers">
+      <div class="container">
+        <div class="columns is-multiline" data-aos="fade-in-up" data-aos-easing="linear">
+          <div class="column is-12 prolog">
+            <h1 class="title has-text-centered section-title">Цветочная подписка</h1>
+          </div>
+          <div class="column is-12 prolog has-text-centered">
+            <div class="date-form">
+              <!--<strong class="waktu is-larger has-text-centered">Цветочна подписка</strong>-->
+              <p id="details-text" class="bodytext" data-aos="fade-in" data-aos-easing="linear">
+                Предлагаем не дарить нам цветы в день торжества, а эти
+                средства перевести в копилку цветочной подписки. После свадьбы Ваши цветы будут радовать нас долгое
+                время
+              </p>
+              <div class="has-text-centered">
+                <a href="https://www.tinkoff.ru/rm/baranova.sofiya54/0sBcQ9430">
+                  <button class="form-place">Пополнить</button>
+                </a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="section-light regular-section" id="accept">
       <div class="container">
         <div class="columns is-multiline" data-aos="fade-in-up" data-aos-easing="linear">
           <div class="column is-12 prolog">
@@ -341,6 +333,7 @@
       duration: 800,
     });
   </script>
+
 </body>
 
 </html>
