--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
         <div id="mobile-nav" class="navbar-menu">
           <div class="navbar-end">
             <div class="navbar-item">
-              <a class="navbar-item" href="#home">
-                О нас
-              </a>
-            </div>
-            <div class="navbar-item">
               <a class="navbar-item" href="#lokasi">
                 Место
               </a>
@@ -61,7 +56,7 @@
             </div>
             <div class="navbar-item">
               <a class="navbar-item" href="#flowers">
-                Цветочная подписка
+                Цветы
               </a>
             </div>
             <div class="navbar-item">
@@ -143,9 +138,6 @@
           <div class="columns">
             <div class="column is-12 hero-menu-desktop has-text-centered">
               <ul>
-                <li class="is-active">
-                  <a href="#home">О нас</a>
-                </li>
                 <li>
                   <a href="#lokasi">Место</a>
                 </li>
@@ -153,7 +145,7 @@
                   <a href="#dresscode">Дресс-код</a>
                 </li>
                 <li>
-                  <a href="#flowers">Цветочная подписка</a>
+                  <a href="#flowers">Цветы</a>
                 </li>
                 <li>
                   <a href="#accept">Подтверждение</a>
@@ -198,15 +190,7 @@
           <h1 class="title has-text-centered section-title">Место</h1>
         </div>
         <div id="text-column" class="columns is-multiline">
-          <!-- <div class="column is-4 has-vertically-aligned-content" data-aos="fade-right">
 
-            <p class="is-larger has-text-centered">
-            <div class="waktu tanggal-hari has-text-centered">Пятница</div>
-            <div class="waktu tanggal-angka has-text-centered">27</div>
-            <div class="waktu tanggal-bulan has-text-centered">Сентябрь 2024</div>
-            </p>
-
-          </div>-->
           <div class="column is-4 has-vertically-aligned-content" data-aos="fade-right" data-aos-easing="linear">
 
             <p class="waktu is-larger has-text-centered">
@@ -223,6 +207,17 @@
               </a>
             </div>
           </div>
+
+          <div id="date-centre" class="column is-4 has-vertically-aligned-content" data-aos="fade-up">
+
+            <p class="is-larger has-text-centered">
+            <div class="waktu tanggal-hari has-text-centered">Пятница</div>
+            <div class="waktu tanggal-angka has-text-centered">27</div>
+            <div class="waktu tanggal-bulan has-text-centered">Сентябрь 2024</div>
+            </p>
+
+          </div>
+
           <div class="column is-4 has-vertically-aligned-content" data-aos="fade-left" data-aos-easing="linear">
 
             <p class="waktu is-larger has-text-centered">
@@ -274,7 +269,7 @@
       <div class="container">
         <div class="columns is-multiline" data-aos="fade-in-up" data-aos-easing="linear">
           <div class="column is-12 prolog">
-            <h1 class="title has-text-centered section-title">Цветочная подписка</h1>
+            <h1 class="title has-text-centered section-title">Цветы</h1>
           </div>
           <div class="column is-12 prolog has-text-centered">
             <div class="date-form">
@@ -282,10 +277,10 @@
               <p id="details-text" class="bodytext" data-aos="fade-in" data-aos-easing="linear">
                 Предлагаем не дарить нам цветы в день торжества, а эти
                 средства перевести в копилку цветочной подписки. После свадьбы Ваши цветы будут радовать нас долгое
-                время
+                время!
               </p>
               <div class="has-text-centered">
-                <a href="https://www.tinkoff.ru/rm/baranova.sofiya54/0sBcQ9430">
+                <a href="https://www.tinkoff.ru/rm/vasileva.yuliya532/KpCEh25457">
                   <button class="form-place">Пополнить</button>
                 </a>
               </div>
