--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta property="og:title" content="Свадьба Георгия и Юлии" />
+  <meta property="og:description" content="Страница-приглашение для гостей" />
+  <meta property="og:image"
+    content="https://drive.google.com/file/d/11RIu1-nbKNSbEz3Rzt7dHXGaKocF7wk7/view?usp=sharing" />
+  <meta property="og:url" content="https://baranovserv.github.io/wed/" />
+  <meta property="og:type" content="website" />
   <title>Свадьба Георигия и Юлии</title>
   <!-- Bulma Version 0.8.x-->
   <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
