--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta property="og:title" content="Свадьба Георгия и Юлии" />
   <meta property="og:description" content="Страница-приглашение для гостей" />
-  <meta property="og:image" content="https://baranovserv.github.io/wed/image/IMG_4449.JPG" />
+  <meta property="og:image"
+    content="https://yandex.ru/images/search?text=%D1%84%D0%BE%D1%82%D0%BE&img_url=https%3A%2F%2Fcs6.pikabu.ru%2Fpost_img%2Fbig%2F2015%2F04%2F26%2F6%2F1430037626_1786129976.jpg&pos=1&rpt=simage&stype=image&lr=117842&parent-reqid=1724075744940708-15072331447918284352-balancer-l7leveler-kubr-yp-vla-59-BAL&source=serp" />
   <meta property="og:url" content="https://baranovserv.github.io/wed/" />
   <meta property="og:type" content="website" />
   <title>Свадьба Георигия и Юлии</title>
