--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <meta name="twitter:title" content="Свадьба Георгия и Юлии" />
   <meta name="twitter:description" content="Страница-приглашение для гостей" />
-  <meta name="twitter:image" content="https://baranovserv.github.io/wed/image/IMG_4449.JPG/" />
+  <meta name="twitter:image" content="https://github.com/BaranovSerV/wed/blob/main/css/IMG_4449.JPG" />
 
   <title>Свадьба Георигия и Юлии</title>
   <!-- Bulma Version 0.8.x-->
