--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta property="og:title" content="Свадьба Георгия и Юлии" />
   <meta property="og:description" content="Страница-приглашение для гостей" />
-  <meta property="og:image" content="https://baranovserv.github.io/wed/image/IMG_4449.JPG/" />
+  <meta property="og:image" content="https://github.com/BaranovSerV/wed/blob/main/css/IMG_4449.JPG" />
   <meta property="og:url" content="https://baranovserv.github.io/wed/" />
   <meta property="og:type" content="website" />
 
