--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
   <meta property="og:title" content="Свадьба Георгия и Юлии" />
   <meta property="og:description" content="Страница-приглашение для гостей" />
-  <meta property="og:image" content="https://github.com/BaranovSerV/wed/blob/main/css/IMG_4449.JPG" />
+  <meta property="og:image" content="https://baranovserv.github.io/wed/css/IMG_4449.JPG" />
   <meta property="og:url" content="https://baranovserv.github.io/wed/" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:title" content="Свадьба Георгия и Юлии" />
   <meta name="twitter:description" content="Страница-приглашение для гостей" />
-  <meta name="twitter:image" content="https://github.com/BaranovSerV/wed/blob/main/css/IMG_4449.JPG" />
+  <meta name="twitter:image" content="https://baranovserv.github.io/wed/css/IMG_4449.JPG" />
 
   <title>Свадьба Георигия и Юлии</title>
   <!-- Bulma Version 0.8.x-->
