--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
 
   <meta property="og:title" content="Свадьба Георгия и Юлии" />
   <meta property="og:description" content="Страница-приглашение для гостей" />
-  <meta property="og:image" content="https://baranovserv.github.io/wed/css/photo_2024-08-11_11-07-12.jpg" />
-  <meta property="og:url" content="https://baranovserv.github.io/wed/" />
+  <meta property="og:image" content="https://wedding-george-julia.ru/css/photo_2024-08-11_11-07-12.jpg" />
+  <meta property="og:url" content="https://wedding-george-julia.ru/" />
   <meta property="og:type" content="website" />
-
-  <meta name="twitter:title" content="Свадьба Георгия и Юлии" />
-  <meta name="twitter:description" content="Страница-приглашение для гостей" />
-  <meta name="twitter:image" content="https://baranovserv.github.io/wed/css/photo_2024-08-11_11-07-12.jpg" />
 
   <title>Свадьба Георигия и Юлии</title>
   <!-- Bulma Version 0.8.x-->
@@ -57,7 +53,7 @@
           <div class="navbar-end">
             <div class="navbar-item">
               <a class="navbar-item" href="#lokasi">
-                Место
+                Место торжества
               </a>
             </div>
             <div class="navbar-item">
@@ -150,7 +146,7 @@
             <div class="column is-12 hero-menu-desktop has-text-centered">
               <ul>
                 <li>
-                  <a href="#lokasi">Место</a>
+                  <a href="#lokasi">Место торжества</a>
                 </li>
                 <li>
                   <a href="#dresscode">Дресс-код</a>
@@ -184,7 +180,7 @@
       <p class="bodytext" data-aos="fade-in" data-aos-easing="linear">
         Приглашаем вас разделить с нами радость особенного для нас
         <br />
-        событияи стать частью нашей семейной истории, ваши
+        события и стать частью нашей семейной истории, ваши
       </p>
       <div class="names" data-aos="fade-in" data-aos-easing="linear">
         <div class="nama-lengkap">
@@ -198,50 +194,35 @@
     <div class="section-dark" id="lokasi">
       <div class="container">
         <div class="column is-12 regular-section">
-          <h1 class="title has-text-centered section-title">Место</h1>
+          <h1 class="title has-text-centered section-title">Место торжества</h1>
         </div>
         <div id="text-column" class="columns is-multiline">
 
-          <div class="column is-4 has-vertically-aligned-content" data-aos="fade-right" data-aos-easing="linear">
 
-            <p class="waktu is-larger has-text-centered">
-              <strong>12.20</strong>
-              <br>
-              <strong>ЗАГС</strong>
-              <br>
-              Красноармейская ул., 2, Раменское
-            </p>
-            <div class="has-text-centered">
-              <a
-                href="https://yandex.ru/maps/10750/ramenskoe/?ll=38.229697%2C55.570293&mode=poi&poi%5Bpoint%5D=38.228668%2C55.570148&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D1057468853&z=18.37t">
-                <button class="form-place">Показать на карте</button>
-              </a>
+          <div id="itr" class="column is-4 has-vertically-aligned-content">
+            <div class="date" data-aos="fade-right" data-aos-easing="linear">
+              <p class="is-larger has-text-centered">
+              <div class="waktu tanggal-hari has-text-centered">Пятница</div>
+              <div class="waktu tanggal-angka has-text-centered">27</div>
+              <div class="waktu tanggal-bulan has-text-centered">Сентябрь 2024</div>
+              </p>
             </div>
-          </div>
-
-          <div id="date-centre" class="column is-4 has-vertically-aligned-content" data-aos="fade-up">
-
-            <p class="is-larger has-text-centered">
-            <div class="waktu tanggal-hari has-text-centered">Пятница</div>
-            <div class="waktu tanggal-angka has-text-centered">27</div>
-            <div class="waktu tanggal-bulan has-text-centered">Сентябрь 2024</div>
-            </p>
-
-          </div>
-
-          <div class="column is-4 has-vertically-aligned-content" data-aos="fade-left" data-aos-easing="linear">
-
-            <p class="waktu is-larger has-text-centered">
-              <strong>14.00 - 24:00</strong>
-              <br>
-              <strong>Ресторан "Ново-Рождественно"</strong>
-              <br>
-              Московская область, г. Жуковский ул. Речной проезд, д. 21, стр. 6
-            </p>
-            <div class="has-text-centered">
-              <a href="https://yandex.ru/maps/org/novo_rozhdestvenno/145187428535/?ll=38.098980%2C55.571576&z=16.84">
-                <button class="form-place">Показать на карте</button>
-              </a>
+            <div data-aos="fade-left" data-aos-easing="linear">
+              <p class="waktu is-larger has-text-centered">
+                <strong>Время: 15:30</strong>
+                <br>
+                <strong>Ресторан "Креатово"</strong>
+                <br>
+                Раменский городской округ,
+                <br>
+                дачный посёлок Кратово, ул. Сиреневая 1
+              </p>
+              <div class="has-text-centered">
+                <a
+                  href="https://yandex.ru/maps/org/kreatovo/1229914035/?ll=38.131098%2C55.612675&mode=search&sctx=ZAAAAAgBEAAaKAoSCcsTCDvFKENAEWssYW2M0UtAEhIJsYuiBz4Gtz8RJ79FJ0uthz8iBgABAgMEBSgKOABArYIGSAFqAnJ1nQHNzEw9oAEAqAEAvQGNAdZWwgEFs%2F%2B7ygSCAhDQutGA0LXQsNGC0L7QstC%2BigIAkgIAmgIMZGVza3RvcC1tYXBz&sll=38.147577%2C55.612675&source=serp_navig&sspn=0.051596%2C0.020826&text=%D0%BA%D1%80%D0%B5%D0%B0%D1%82%D0%BE%D0%B2%D0%BE&z=14">
+                  <button class="form-place">Показать на карте</button>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -265,12 +246,12 @@
             Но мы будем рады, если в своих нарядах вы поддержите цветовую гамму и стиль нашей свадьбы:
           </p>
         </div>
-        <div class="circle-dress-code" data-aos="fade-left" data-aos-easing="ease">
+        <div class="circle-dress-code">
+          <div class="circle" style="background-color: #005d43;"></div>
           <div class="circle" style="background-color: 	#71BC78;"></div>
-          <div class="circle" style="background-color: #5D9B9B;"></div>
-          <div class="circle" style="background-color: #3EB489;"></div>
-          <div class="circle" style="background-color: #FEE5AC;"></div>
-          <div class="circle" style="background-color: #D8BFD8;"></div>
+          <div class="circle" style="background-color: #a1cdec;"></div>
+          <div class="circle" style="background-color: #ffbe98;"></div>
+          <div class="circle" style="background-color: #97999b;"></div>
         </div>
       </div>
     </div>
@@ -304,7 +285,7 @@
 
     <div class="section-light regular-section" id="accept">
       <div class="container">
-        <div class="columns is-multiline" data-aos="fade-in-up" data-aos-easing="linear">
+        <div class="columns is-multiline">
           <div class="column is-12 prolog">
             <h1 class="title has-text-centered section-title">Подтверждение присутствия</h1>
           </div>
